<resources>
    <string name="app_name">Capstone</string>
    <string name="default_web_client_id">asdwdaskfnkaslknwefwihefioefo8irewfhe8</string>
    <string name="signup">SignUp</string>
    <string name="first_create_your_account">First Create Your Account</string>
    <string name="name">Name</string>
    <string name="content">IMAGE VIEW</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="usage">Cara penggunaan aplikasi ini yaitu dengan memasukan scanning object makanan dan lalu check hasil datanya.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="todo">Google login / sign in</string>
    <string name="enter_your_email_and_password">Enter Your Username And Password</string>
    <string name="signin">SignIn</string>
    <string name="image_top">image top view\n</string>
    <string name="nama_user">Nama user</string>
    <string name="wellcome">Wellcome</string>
    <string name="logout">logout</string>
    <string name="check_your_alergy">Check your alergy</string>
    <string name="desciption_result">Makanan ini mengandung beberapa bahan berikut. ketela, tepung terigu, tomato. sugar</string>
    <string name="suggestion">Suggestion</string>
    <string name="description">Description</string>
    <string name="results">Results</string>
    <string name="action_settings">Settings</string>
    <string name="alergy_snap">Alergy Snap</string>
    <string name="check">Check</string>
    <string name="image_result">Image result</string>
    <string name="action_back">arrow back</string>
    <string name="empty_img">gambar kosong</string>
    <string name="add_sample_photo">Add sample photo</string>
    <string name="makanan_belum_tersedia">Makanan belum tersedia dalam database kami</string>
    <string name="scan_ulang">Silahkan scan ulang!</string>
</resources>