<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.homepage.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="4dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="?attr/actionBarPopupTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/wellcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:fontFamily="@font/poppins_regular"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nama_user"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="33sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="40dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/check_your_alergy"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/information"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/information" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageDisplay"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            app:srcCompat="@drawable/image" />

        <Space
            android:layout_width="2dp"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/addSamplePhoto"
                android:layout_width="65dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/photo"
                android:contentDescription="@string/add_sample_photo"
                android:clickable="true"
                android:onClick="showImageOptions"/>
        </LinearLayout>
        <Space
            android:layout_width="2dp"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/check"/>
    </LinearLayout>
</LinearLayout>