<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResult"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="?attr/actionBarPopupTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/empty"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/makanan_belum_tersedia"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/scan_ulang"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btnRescan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textSize="17sp"
        android:text="Rescan"
        android:background="@drawable/custom_button_red_background"/>
</LinearLayout>